# hitalent-python-test-task

./: README.md  docker-compose.test.yml  docker-compose.yml  pyproject.toml  pytest.ini
docker/: Dockerfile.test
docker/django/: Dockerfile
environment/: .env.example  .env.test
server/: settings.py  urls.py
server/api/: urls.py
server/api/v1/: urls.py
server/api/v1/departments/: serializers.py  views.py
server/api/v1/employees/: serializers.py
server/apps/core/: models.py
server/apps/departments/: admin.py  apps.py  managers.py  models.py
server/apps/departments/migrations/: 0001_initial.py
tests/: conftest.py  factories.py  test_departments.py
